fidoconfig 0.7
--------------

----- cvs ci ------
Sun Apr 25 19:26:39 CEST 1999
Antonio:
+ Fixed bug in stripComment() if comment line had more than one '#'.
+ Some fixes in tparser.

----- cvs ci ------
Sun Apr 18 20:36:56 CEST 1999
Mtt:
+ fixed wrong Documentation. Please do a make next time.

----- cvs ci ------
Sun Apr 18 15:45:09 NOVST 1999
Max:
+ add separateBundles option

Fri Apr 16 21:27:53 NOVST 1999
Max:
+ update proposal.texi
     
----- cvs ci ------
Wed Apr 14 14:54:14 CEST 1999
mtt:
+ Comments are now removed from the line before the parsing. 
  If the # is between two " it is no comment. 
  Take a look at the state-machine in stripComment() if it is correct.
+ if you use a statement which specifies information about a link (ourAka,
  autocreateDefaults...) it is first tested now, if a link exists.
+ if in an area Option the string msg is recognized the area is a *.msg area.

----- cvs ci ------
Sun Apr 11 17:00
Antonio:
+ '-a' option added to fconf2golded. Export areas only.
+ fidoconfig now supports descriptions for fileareas.
+ update tparser.

----- cvs ci ------
Sat Apr  10 22:25:12
Max:
removed $f from unpack code
	
----- cvs ci ------
Tue Apr  6 18:23:17 CEST 1999	
Antonio: (applied by mtt)
+ Fidoconfig and hpt now supports descriptions for areas. See docs for
  more info and examples. fconf2golded supports too.
+ fconf2golded export localareas too. dupe and bad areas are local type now.
+ fidoconfig supports filenames with one or more spaces on it. Should be
  between double quotes.
+ fidoconfig and hpt supports create and read filenames of areas in dos
  style (8+3). Useful when you use Linux and want to store your message base
  on a DOS partition.
+ Modifications in tparser.


----- cvs ci ------
Mon Mar  29 16:02
Fedor:
+ token "ReportTo" added to s_fidoconfig for report to echoarea or netmail

----- cvs ci ------
Thu Mar  18 22:21
Max:
+ carbons to echoarea (not only to localarea)

----- cvs ci ------
Wed Mar  17 20:50
Max: