@@ -2,9 +2,10 @@ fidoconfig 0.7
 --------------
 
 ----- cvs ci ------
-Sun Apr 25 19:26:39 CEST 1999
+Sun Apr 25 21:37:29 CEST 1999
 Antonio:
 + Fixed bug in stripComment() if comment line had more than one '#'.
+  New stripComment(). Test it please!.
 + Some fixes in tparser.
 
 ----- cvs ci ------
